--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -44,4 +44,11 @@ config PINCTRL_COH901
 
 endmenu
 
+config PINMUX_AT91
+	bool "AT91 pinmux driver"
+	depends on ARCH_AT91
+	select PINMUX
+	help
+	  Say Y here to enable the AT91 pinmux driver
+
 endif
