ARM: at91: dt: enable usb ohci for 9g20 and 9g45
Signed-off-by: Jean-Christophe PLAGNIOL-VILLARD <plagnioj@jcrosoft.com>

--- a/arch/arm/boot/dts/usb_a9g20.dts
+++ b/arch/arm/boot/dts/usb_a9g20.dts
@@ -30,6 +30,11 @@
 				phy-mode = "rmii";
 				status = "okay";
 			};
+
+			usb0: ohci@00500000 {
+				num-ports = <2>;
+				status = "okay";
+			};
 		};
 	};
 };
