--- a/arch/arm/boot/dts/at91sam9g20.dtsi
+++ b/arch/arm/boot/dts/at91sam9g20.dtsi
@@ -159,6 +159,13 @@
 				interrupts = <21>;
 				status = "disabled";
 			};
+
+			usb0: ohci@00500000 {
+				compatible = "atmel,at91rm9200-ohci", "usb-ohci";
+				reg = <0x00500000 0x100000>;
+				interrupts = <20>;
+				status = "disabled";
+			};
 		};
 	};
 };
