--- a/arch/arm/boot/dts/at91sam9g45.dtsi
+++ b/arch/arm/boot/dts/at91sam9g45.dtsi
@@ -164,6 +164,13 @@
 				interrupts = <25>;
 				status = "disabled";
 			};
+
+			usb0: ohci@00700000 {
+				compatible = "atmel,at91rm9200-ohci", "usb-ohci";
+				reg = <0x00700000 0x100000>;
+				interrupts = <22>;
+				status = "disabled";
+			};
 		};
 	};
 };
