ARM: at91: usb enable ehci dt support for 9g45
Signed-off-by: Jean-Christophe PLAGNIOL-VILLARD <plagnioj@jcrosoft.com>

--- a/arch/arm/boot/dts/at91sam9g45.dtsi
+++ b/arch/arm/boot/dts/at91sam9g45.dtsi
@@ -171,6 +171,13 @@
 				interrupts = <22>;
 				status = "disabled";
 			};
+
+			usb1: ehci@00800000 {
+				compatible = "atmel,atmel-ehci", "usb-ohci";
+				reg = <0x00800000 0x100000>;
+				interrupts = <22>;
+				status = "disabled";
+			};
 		};
 	};
 };
