ARM: at91: add reset controler DT support
Signed-off-by: Jean-Christophe PLAGNIOL-VILLARD <plagnioj@jcrosoft.com>

--- a/arch/arm/boot/dts/at91sam9g20.dtsi
+++ b/arch/arm/boot/dts/at91sam9g20.dtsi
@@ -87,6 +87,11 @@
 				gpio-controller;
 			};
 
+			shdc: shutdown-controller@fffffd10 {
+				compatible = "atmel,at91sam9260-shdc";
+				reg = <0xfffffd10 0xf>;
+			};
+
 			dbgu: serial@fffff200 {
 				compatible = "atmel,at91sam9260-usart";
 				reg = <0xfffff200 0x200>;
