--- a/arch/arm/boot/dts/at91sam9g45.dtsi
+++ b/arch/arm/boot/dts/at91sam9g45.dtsi
@@ -110,6 +110,11 @@
 				gpio-controller;
 			};
 
+			shdc: shutdown-controller@fffffd10 {
+				compatible = "atmel,at91sam9260-shdc";
+				reg = <0xfffffd10 0xf>;
+			};
+
 			dbgu: serial@ffffee00 {
 				compatible = "atmel,at91sam9260-usart";
 				reg = <0xffffee00 0x200>;
