ARM: AT91: modify Kconfig message for SAM9G45
SAM9G45 entry specify the family name for SAM9G45,
SAM9M10, SAM9G46 and SAM9M11 SoCs.

Signed-off-by: Nicolas Ferre <nicolas.ferre@atmel.com>

--- a/arch/arm/mach-at91/Kconfig
+++ b/arch/arm/mach-at91/Kconfig
@@ -93,7 +93,7 @@ config ARCH_AT91SAM9G20
 	select AT91_SAM9_ALT_RESET
 
 config ARCH_AT91SAM9G45
-	bool "AT91SAM9G45"
+	bool "AT91SAM9G45 family"
 	select CPU_ARM926T
 	select GENERIC_CLOCKEVENTS
 	select HAVE_AT91_USART3
